--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="search">Search</string>
     <string name="back_arrow">Back arrow</string>
     <string name="no_internet_connection">No internet connection!</string>
+    <string name="connected_to_internet">Connected to internet!</string>
     <string name="something_went_wrong">Sorry… something went wrong.</string>
 </resources>
